syntax = "proto3";

option java_multiple_files = true;

package com.example;

message MovieRatingsRequest {}

message MovieRating {
    string movie_id = 1;
    int32 rating = 2;
}

service MovieRatingsService {
    rpc getTop10MoviesByRating (MovieRatingsRequest) returns (stream MovieRating) {}
}
